# Onyx-Saab-Hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/application/: export_replay.py  get_results.py  run_batch.py  run_simulation.py  training_orchestrator.py  use_cases.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: __init__.py  aircraft.py  attack_plan.py  base.py  battle.py  city.py  location.py  simulation.py
backend/src/domain/ports/: __init__.py  event_publisher.py  export.py  knowledge_base.py  llm_agent.py  simulation_repository.py  strategy.py
backend/src/domain/services/: __init__.py  attack_plan_executor.py  attack_plan_strategy.py  combat_resolver.py  damage.py  detection.py  engagement_engine.py  fitness.py  fuel_manager.py  geometry.py  metrics.py  movement.py  pattern_extractor.py  pilot_reflexes.py  playbook_executor.py  random_plan_generator.py  service_manager.py  simulation_engine.py  strike_resolver.py
backend/src/domain/value_objects/: __init__.py  attack_pattern.py  attack_plan.py  combat_result.py  damage_model.py  decision.py  defense_playbook.py  doctrine_entry.py  engagement_result.py  event.py  match_result.py  metrics.py  position.py  settings.py
backend/src/infrastructure/ai/: claude_agent.py  claude_generator.py  generators.py  live_commander.py  prompts.py  random_attack_generator.py
backend/src/infrastructure/api/: dependencies.py  main.py  schemas.py  websocket.py
backend/src/infrastructure/export/: json_export.py
(+68 files in other folders)
